--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,17 +1,10 @@
-<!-- 	</web-app><?xml version="1.0" encoding="UTF-8"?> -->
-<!-- <web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee" -->
-<!--          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" -->
-<!--          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" -->
-<!--          version="4.0"> -->
 
-<!--     <servlet> -->
-<!--         <servlet-name>MessageEncoderDecoder</servlet-name> -->
-<!--         <servlet-class>encoderdecoder.MessageEncoderDecoder</servlet-class> -->
-<!--     </servlet> -->
-
-<!--     <servlet-mapping> -->
-<!--         <servlet-name>MessageEncoderDecoder</servlet-name> -->
-<!--         <url-pattern>/MessageEncoderDecoder</url-pattern> -->
-<!--     </servlet-mapping> -->
-
-<!-- </web-app> -->
+<web-app xmlns="http://java.sun.com/xml/ns/j2ee"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
+	version="2.4" id="WebApp_ID">
+	<display-name>MessageEncodingDecoding</display-name>
+	<welcome-file-list>
+		<welcome-file>index.jsp</welcome-file>
+	</welcome-file-list>
+</web-app>
